--- a/app/src/main/res/layout/fragment_cocktail.xml
+++ b/app/src/main/res/layout/fragment_cocktail.xml
@@ -1,20 +1,35 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:orientation="vertical">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="148dp"
+    android:orientation="vertical"
+    tools:context=".MainActivity">
 
-    <TextView
-        android:id="@+id/nom"
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:textSize="12sp"
-        android:textAppearance="?attr/textAppearanceListItem"/>
+        android:layout_height="148dp"
+        android:orientation="horizontal">
 
-    <TextView
-        android:id="@+id/image"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:textSize="10sp"
-        android:textAppearance="?attr/textAppearanceListItem"/>
+        <TextView
+            android:id="@+id/nom"
+            android:layout_width="150dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="50dp"
+            android:textAppearance="?attr/textAppearanceListItem"
+            android:textColor="#C608F3"
+            android:textSize="12sp" />
+
+        <ImageView
+            android:id="@+id/image"
+            android:layout_width="147dp"
+            android:layout_height="147dp"
+            tools:ignore="MissingConstraints"
+            tools:layout_editor_absoluteX="16dp"
+            tools:layout_editor_absoluteY="88dp" />
+
+
+    </LinearLayout>
+
 </LinearLayout>
