--- a/app/src/main/res/layout/fragment_detail.xml
+++ b/app/src/main/res/layout/fragment_detail.xml
@@ -10,13 +10,28 @@
     tools:context=".DetailFrag">
 
 
-    <TextView
-        android:id="@+id/name_detail"
+    <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:padding="15dp"
-        android:text="Name"
-        android:textColor="#7632F5" />
+        android:orientation="horizontal">
+
+        <CheckBox
+            android:id="@+id/checkBox"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:button="@drawable/checkbox_selector"
+            android:checked="false"
+            android:clickable="true"
+            android:textAlignment="center" />
+
+        <TextView
+            android:id="@+id/name_detail"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:padding="15dp"
+            android:text="Name"
+            android:textColor="#7632F5" />
+    </LinearLayout>
 
     <ImageView
         android:id="@+id/image_detail"
@@ -70,10 +85,10 @@
         </LinearLayout>
 
         <ListView
+            android:id="@+id/listIngredients"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="center_vertical"
-            android:id="@+id/listIngredients"/>
+            android:layout_gravity="center_vertical" />
 
 
     </LinearLayout>
