--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -37,14 +37,14 @@
                     android:id="@+id/mainRechercheFrag"
                     android:name="com.example.myapplicationcocktail.RechercheFragment"
                     android:layout_width="match_parent"
-                    android:layout_height="56dp"
+                    android:layout_height="wrap_content"
                     android:layout_weight="0.1" />
 
                 <fragment
                     android:id="@+id/mainFrag"
                     android:name="com.example.myapplicationcocktail.AccueilFragment"
                     android:layout_width="match_parent"
-                    android:layout_height="207dp"
+                    android:layout_height="wrap_content"
                     android:layout_weight="1" />
 
             </LinearLayout>
