--- a/app/src/main/res/layout/fragment_favoris.xml
+++ b/app/src/main/res/layout/fragment_favoris.xml
@@ -3,12 +3,12 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/list"
-    android:name="com.example.jamian.first.AccueilFragment"
+    android:id="@+id/listFav"
+    android:name="com.example.jamian.first.FavFragment"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layout_marginLeft="16dp"
     android:layout_marginRight="16dp"
     app:layoutManager="LinearLayoutManager"
-    tools:context=".AccueilFragment"
-    tools:listitem="@layout/listeitem_cocktail"/>
+    tools:context=".Favoris"
+    tools:listitem="@layout/listeitem_favoris"/>
