v408 (derniers debugage API + listview)

--- a/app/src/main/res/layout/fragment_detail.xml
+++ b/app/src/main/res/layout/fragment_detail.xml
@@ -88,8 +88,8 @@
             android:id="@+id/listIngredients"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="center_vertical" />
-
+            android:layout_gravity="center_vertical"
+            android:background="#00000000" />
 
     </LinearLayout>
 
