--- a/app/src/main/res/layout/fragment_favoris.xml
+++ b/app/src/main/res/layout/fragment_favoris.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.recyclerview.widget.RecyclerView
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.recyclerview.widget.RecyclerView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/listFav"
@@ -8,7 +7,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layout_marginLeft="16dp"
+    android:layout_marginTop="50dp"
     android:layout_marginRight="16dp"
     app:layoutManager="LinearLayoutManager"
     tools:context=".Favoris"
-    tools:listitem="@layout/listeitem_favoris"/>
+    tools:listitem="@layout/listeitem_favoris" />
