--- a/app/src/main/res/layout/listeitem_favoris.xml
+++ b/app/src/main/res/layout/listeitem_favoris.xml
@@ -4,11 +4,13 @@
     android:layout_width="match_parent"
     android:layout_height="148dp"
     android:orientation="vertical"
-    tools:context=".Favoris">
+    tools:context=".Favoris"
+    android:layout_gravity="center">
 
     <LinearLayout
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="148dp"
+        android:layout_gravity="center_horizontal"
         android:orientation="horizontal">
 
         <TextView
@@ -30,14 +32,14 @@
 
 
         <ImageButton
-            android:background="@null"
             android:id="@+id/checkBoxFav"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:layout_marginLeft="50dp"
-            android:src="@drawable/ic_favorite_checked"
+            android:background="@null"
             android:clickable="true"
+            android:src="@drawable/ic_favorite_checked"
             android:textAlignment="center" />
 
 
